# SpacePallets

./: .gitignore  .version  CMakeLists.txt  GenSolution.cmd  Makefile  README.md  helpers.cmake  manifest.submission.txt
Helpers/: CMakeLists.txt  Helpers.cpp  Helpers.h  nerd_recruitment.natvis  stb_image.cpp  stb_image_write.cpp
RigidBodyPhysics/: CMakeLists.txt  README.md  all.h  main.cpp  physicshelper.h
RigidBodyPhysics/2023/: REC991.cpp  REC991.h
cmake/: CheckCXXCompilerX86ArchFlag.cmake  Submission.cmake
source/: helpers.cmake
source/Helpers/: CMakeLists.txt  Helpers.cpp  Helpers.h  nerd_recruitment.natvis  stb_image.cpp  stb_image_write.cpp
source/RigidBodyPhysics/: CMakeLists.txt  README.md  all.h  main.cpp  physicshelper.h
source/RigidBodyPhysics/2023/: REC991.cpp  REC991.h  draw.cpp  draw.h
